--- a/src/app/pages/gestao-paciente/paciente/paciente.component.html
+++ b/src/app/pages/gestao-paciente/paciente/paciente.component.html
@@ -11,8 +11,8 @@
                   <label for="nome">Escolha o médico a ser consultado</label>
                   <select class="form-control" formControlName="medico">
                     <option value="null" selected>SELECIONE</option>
-                    <option *ngFor="let medico of listMedico" value="{{ medico.medico }}">{{
-                      medico.descricao}}</option>
+                    <option *ngFor="let medico of listMedico" value="{{ medico.id }}">{{
+                      medico.name}}</option>
                   </select>                
               </div>
               <div class="form-group col-md-3">
@@ -28,10 +28,11 @@
                   <button class="btn btn-success m-2 mb-lg-n1" (click)="novoPaciente()">
                     NOVO PACIENTE
                   </button>
-                </div>              
-               
+                </div>  
               </div>
             </div>
+            <br>
+            <br>
             <div class="form-row align-items-center">
               <div class="form-group col-md-12">
                 <nb-card>
@@ -41,32 +42,38 @@
                         [headerHeight]="35" [footerHeight]="50" [rowHeight]="'auto'"
                         [messages]="{emptyMessage: 'Sem dados...'}" [limit]="6">
 
-                        <ngx-datatable-column name="Foto" prop="img"></ngx-datatable-column>
+                        <ngx-datatable-column name="Foto" prop="avatar">
+                          <ng-template ngx-datatable-cell-template let-row="row">
+                            <div class="text-center">                                 
+                              <img src="{{row.avatar}}"> 
+                            </div> 
+                          </ng-template> 
+                        </ngx-datatable-column>
                         <ngx-datatable-column name="Nome" prop="nome">
                           <ng-template ngx-datatable-cell-template let-row="row">
                             <div class="text-left">
-                              {{ row.nome }}
+                              {{ row.name }}
                             </div>
                           </ng-template>
                         </ngx-datatable-column>
                         <ngx-datatable-column name="Telefone" prop="telefone">
                           <ng-template ngx-datatable-cell-template let-row="row">
                             <div class="text-center">
-                              {{ row.telefone }}
+                              {{ row.cellPhone }}
                             </div>
                           </ng-template>
                         </ngx-datatable-column>
                         <ngx-datatable-column name="Última Consulta" prop="ultimaConsulta">
                           <ng-template ngx-datatable-cell-template let-row="row">
                             <div class="text-center">
-                              {{ row.ultimaConsulta }}
+                              {{ row.idPatient }}
                             </div>
                           </ng-template>
                         </ngx-datatable-column>
                         <ngx-datatable-column name="Data de Nascimento" prop="dataNascimento">
                           <ng-template ngx-datatable-cell-template let-row="row">
                             <div class="text-center">
-                              {{ row.dataNascimento }}
+                              {{ row.birthDate }}
                             </div>
                           </ng-template>
                         </ngx-datatable-column>
@@ -101,6 +108,14 @@
                 </nb-card>
               </div>
             </div>
+            <div class="row" *ngIf="isActive" class="loader">
+              <div class="text-center" style="margin-top: -260px;margin-right: 40px;">
+                <button class="btn btn-primary" type="button" disabled>
+                  <span class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span>
+                  Carregando...
+                </button>
+              </div>
+            </div>   
           </div>
         </form>      
     </div>
